workspace = { members = ["examples/android"] }
[package]
name = "corsola"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
kira = "0.9.0"
glyphon = "0.3.0"
pixels = "0.13.0"
tiny-skia = "0.11.4"
wgpu = "0.16"
# for wgpu 0.19 support
# pixels = { git = "https://github.com/mkrasnitski/pixels.git", branch = "bump-wgpu-winit", version = "0.13.0" }
self_cell = "1.0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.28"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.28", features = ["android-native-activity"] }
